--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
     - name: "Clean (x86_64) RootFS"
       run: |
         cd MiceWine-RootFS-Generator
-        sudo rm -rf /data/data/com.micewine.emu/files/usr workdir rootfs
+        sudo rm -rf /data/data/com.nianticlabs.pokemongo/files/usr workdir rootfs
 
     - name: "Start Building (aarch64)"
       run: |
